# twitch-follows-tui

./: Cargo.toml
.github/workflows/: release.yml
src/: api.rs  app.rs  main.rs  models.rs  ui.rs
