[package]
name = "twitch-follows-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
anyhow = "1"
serde_json = "1"
ratatui = "0.30.0"
crossterm = "0.28"
open = "5"
